src/objects/KAL_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KAL_Event_Nature__c</fullName>
        <label>KAL Event Nature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KAL_Event_Nature</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KAL_route</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_number_of_people__c</fullName>
        <label>Total number of people</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>KAL Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Oppor Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>